<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="ExerciseExternalFireControlParameters" Id="{f582d874-d478-4b4a-9f84-78fe9777f030}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ExerciseExternalFireControlParameters
VAR_INPUT
	TimeChannel: TimeChannelSettings;
	StartManualExercise: BOOL;
	ExerciseStatus: BOOL;
	Monitor: BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <LineIds Name="ExerciseExternalFireControlParameters">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>